--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "typescript": "^4.8.3"
   },
   "dependencies": {
+    "@chainlink/contracts": "^0.4.1",
     "@openzeppelin/contracts": "^4.7.3",
     "hardhat-contract-sizer": "^2.6.1",
     "hardhat-docgen": "^1.3.0"
