--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@chainlink/contracts": "^0.4.1",
     "@openzeppelin/contracts": "^4.7.3",
+    "@primitivefi/hardhat-dodoc": "^0.2.3",
     "hardhat-contract-sizer": "^2.6.1",
     "hardhat-docgen": "^1.3.0"
   }
